--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Checkout</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="application/x-javascript">
@@ -18,20 +18,14 @@
     <link href="/laofuzi/css/style1.css" rel='stylesheet' type='text/css' />
     <script type="text/javascript" src="/laofuzi/js/jquery-1.11.1.min.js"></script>
 </head>
-
 <body>
     <header>
         <div class="soubg">
             <div class="sou fl">
                 <div id="userinfo" class="fl"></div>
             </div>
-            <div id="quanxian" class="fr top_right">
-                <a href="index">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;
-                <a href="order">我的订单</a>&nbsp;&nbsp;|&nbsp;
-                <a class="car_t" href="checkout">&nbsp;&nbsp;购物车 </a>
-            </div>
+            <div id="quanxian" class="fr top_right"></div>
         </div>
-
         <div class="top">
             <div class="logo">
                 <a href="#"><img src="/laofuzi/images/lfz.png" /></a>
@@ -47,39 +41,12 @@
     <div class="about_top">
         <div class="container">
             <div class="col-md-3">
-                <ul id="categories" class="menu1"></ul>
+                <ul id="categories" class="menu1 catemenu"></ul>
             </div>
-            <div class="col-md-9 content_right">
-                <div class="dreamcrub">
-                    <ul class="breadcrumbs">
-                        <li class="home">
-                            <a href="index" title="返回首页">首页</a>&nbsp;<span>&gt;</span>
-                        </li>
-                        <li class="women">购物车</li>
-                    </ul>
-                    <ul class="previous">
-                        <li><a href="index">返回上一页</a></li>
-                    </ul>
-                    <div class="clearfix"></div>
-                </div>
-
-                <div id="lfzcart" class="shopping_cart shop">
-                </div>
-                <div class="total">
-                    <div class="total_left">共计 : <span class="J_totalCount">3</span>件商品</div>
-                    <div class="total_right">总价 <span class="J_totalPrice">￥300.8</span></div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="login_buttons">
-                    <div class="login_button"><a href="order.html">确认</a></div>
-                    <div class="clearfix"></div>
-                </div>
-                <div class="clearfix"></div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="clearfix"> </div>
+            <div id="bookdetail" class="bookshow"></div>
         </div>
     </div>
+
     <div class="footer">
         <div class="container">
             <p><a href="index">www.laofuzi.cn</a></p>
@@ -91,17 +58,35 @@
 </body>
 <script type="text/javascript" src="/laofuzi/js/base.js"></script>
 <script>
+    // 判断顶部导航显示信息
     if(userid != undefined | userid != "" | userid != "null"){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user +"</a>&nbsp;|&nbsp;\n" +
             "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
+        var quanxian = "<a href=\"index\">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;\n" +
+            "<a href=\"order\">我的订单</a>&nbsp;&nbsp;|&nbsp;\n" +
+            "<a class=\"car_t\" href=\"checkout\">&nbsp;&nbsp;购物车 </a>";
+        quanxian += "<div class=\"last\">\n<div class=\"shop\">\n" +
+            "<h4 class='lih4'>老夫子</h4><ul id=\"lfzcart\"></ul>\n</div>\n</div>";
     }else if(user1 != undefined | user1 != "" | user1 != "null"){
         var infouser = "欢迎! &nbsp;<a href=\"#\" style=\"color:#ff4e00;\">"+ user1 +"</a>&nbsp;|&nbsp;\n" +
             "<a href=\"login\" style=\"color:#ff4e00;\">退出</a>";
+        quanxian = "<a href=\"index\">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;\n" +
+            "<a href=\"order\">我的订单</a>&nbsp;&nbsp;|&nbsp;\n" +
+            "<a class=\"car_t\" href=\"checkout\">&nbsp;&nbsp;购物车 </a>";
+        quanxian += "<div class=\"last\">最近添加\n<div class=\"shop\">\n" +
+            "<h4 class='lih4'>老夫子</h4><ul id=\"lfzcart\"></ul>\n</div>\n</div>";
+    }else{
+        infouser = "你好! 请&nbsp;<a href=\"login\" style=\"color:#ff4e00;\">登录</a>&nbsp;|&nbsp;\n" +
+            "<a href=\"register\" style=\"color:#ff4e00;\">免费注册</a>";
+        quanxian = "<a href=\"index\">首页</a>&nbsp;&nbsp;&nbsp;|&nbsp;\n" +
+            "<a href=\"#\">我的订单</a>&nbsp;&nbsp;|&nbsp;\n" +
+            "<a class=\"car_t\" href=\"#\">&nbsp;&nbsp;购物车 </a>";
     }
     $("#userinfo").append(infouser);
+    $("#quanxian").append(quanxian);
+    //搜索功能
     function search() {
         var keywords = document.getElementById("search").value;
-        // alert(keywords);
         $.ajax({
             url: "/laofuzi/book/findByCondition",
             type: "POST",
@@ -116,7 +101,7 @@
             }
         });
     }
-
+    //左侧书籍类别
     $(function() {
         var menu1_ul = $('.menu1> li > ul'),
             menu1_a = $('.menu1 > li > a');
@@ -132,74 +117,7 @@
                 $(this).next().stop(true, true).slideUp('normal');
             }
         });
-
     });
-
-    $.ajax({
-        url: "/laofuzi/cart/findByUserId",
-        type: "POST",
-        dataType:"json",
-        contentType : 'application/json',
-        data: JSON.stringify({"userId":userid}),
-        async: false,
-        success: function(result){
-            console.log(result);
-            console.log(result[0].img);
-            if(result.length <= 0){
-                var cartpro = "<li class=\"cart_box\">\n" +
-                    "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
-                    "<h3>你的购物车还是空的</h3>\n</li>";
-                $("#lfzcart").append(cartpro);
-            }
-            for(var i=0 ; i < result.length; i++ ){
-                var cartpro = "<li>\n"+
-                    "<input id='checkbox' type=\"checkbox\" name=\"vehicle\" checked='checked'/>"+
-                    "<div class=\"cart_box\">\n<div class=\"message\">\n"+
-                    "<div class=\"alert-close\"> </div>\n" +
-                    "<div class=\"list_img\">"+
-                    "<img src=\""+ result[i].img +"\" class=\"img-responsive\" alt=\"\" /></div>\n" +
-                    "<div class=\"list_desc\">\n<div class=\"shopText\">\n<div class=\"clear\">\n" +
-                    "<h5>"+ result[i].name +"</h5>\n" +
-                    "<h5>作者："+ result[i].author +"</h5>\n</div>\n" +
-                    "<div class=\"clear\">\n<div class=\"plush\">\n" +
-                    "<span class=\"J_btnDelCount\">-</span>\n" +
-                    "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
-                    "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
-                    "<strong class=\"J_smallTotalPrice\">小计："+ result[i].unitprice +"</strong>\n" +
-                    "<h5>单价："+ result[i].unitprice +"</h5>\n</div>\n" +
-                    "<h5>库存："+ result[i].quantity+"</h5>\n</div>\n</d  >\n</div>\n" +
-                    "<div class=\"clearfix\"></div>\n</div>\n</div>\n</li>";
-                $("#lfzcart").append(cartpro);
-            }
-            var cbox = document.getElementById("checkbox");
-            for(var i = 0; i < cbox.length; i++){
-                if(cbox[i].checked == "checked"){
-                    console.log(111111,result[i].name);
-                }
-            }
-        }
-    });
-
-
-
-
-    $.ajax({
-        url: "/laofuzi/book/findAll",
-        type: "POST",
-        dataType:"json",
-        contentType : 'application/json',
-        data: "",
-        async: false,
-        success: function(result){
-            console.log(result);
-            for(var j = 0; j < 5; j++){
-                var bookpop = "<a href=\"javascript:bookclick("+result[j].categoryId+","+result[j].id+");\">"+
-                    result[j].name +"</a>";
-                $("#popular").append(bookpop);
-            }
-        }
-    });
-
     $.ajax({
         url: "/laofuzi/category/findByParentId",
         type: "POST",
@@ -234,8 +152,74 @@
             }
         }
     });
+    //显示登录用户的购物车信息
+    $.ajax({
+        url: "/laofuzi/cart/findByUserId",
+        type: "POST",
+        dataType:"json",
+        contentType : 'application/json',
+        data: JSON.stringify({"userId":userid}),
+        async: false,
+        success: function(result){
+            console.log(result);
+            console.log(result[0].img);
+            if(result.length <= 0){
+                var cartpro = "<li class=\"noshop\">\n" +
+                    "<img src=\"/laofuzi/images/icon_tips2.png\" alt=\"\" />\n" +
+                    "<h3>你的购物车还是空的</h3>\n</li>";
+                $("#lfzcart").append(cartpro);
+            }
+            for(var i=0 ; i < 3; i++ ){
+                var cartpro = "<li>\n" +
+                    "<div class=\"clear\">\n<div class=\"shopImg\">";
+                cartpro +=  "<img src=\""+ result[i].img +"\" alt=\"\" />\n</div>\n" +
+                    "<div class=\"shopText\">\n<div class=\"clear\">";
+                cartpro += "<h5>"+ result[i].name +"</h5>\n" +
+                    "<a href=\"#\" class=\"close J_btnDelete\">X</a>\n" +
+                    "</div>\n<div class=\"clear\">\n<div class=\"plush\">\n" +
+                    "<span class=\"J_btnDelCount\">-</span>\n" +
+                    "<input class=\"J_inputCount\" type=\"text\" value=\""+ result[i].number +"\" />\n" +
+                    "<span class=\"J_btnAddCount\">+</span>\n</div>\n" +
+                    "<strong class=\"J_smallTotalPrice\">"+ result[i].unitprice +"</strong>\n" +
+                    "</div>\n</div>\n</div>\n</li>";
+                $("#lfzcart").append(cartpro);
+                var shopimg = document.getElementsByClassName("shopImg")[i];
+                console.log("sss:",shopimg);
+                console.log(result[i].categoryId,result[i].id);
+                shopimg.onclick = function(){
+                    bookclick(result[i].categoryId,result[i].id);
+                };
+            }
+        }
+    });
+    //显示书籍列表以及搜索框下方的热销书籍
+    $.ajax({
+        url: "/laofuzi/book/findAll",
+        type: "POST",
+        dataType:"json",
+        contentType : 'application/json',
+        data: "",
+        async: false,
+        success: function(result){
+            console.log(result);
+            for(var i=0 ; i < result.length; i++ ){
+                var bookpro = "<a href=\"javascript:bookclick("+result[i].categoryId+","+result[i].id+");\">\n" +
+                    "<div class=\"grid2 bookdetail\">\n" +
+                    "<div class=\"view view-first\">\n" +
+                    "<img src=\""+ result[i].img +"\" class=\"img-responsive\" alt=\"\" />\n" +
+                    "<h5>"+ result[i].name +"&nbsp;&nbsp;&nbsp;"+ result[i].author +"</h5>\n" +
+                    "<h6>￥"+ result[i].unitprice +"</h6>\n" +
+                    "</div>\n</div>\n</a>";
+                $("#bookdetail").append(bookpro);
+            }
+            for(var j = 0; j < 5; j++){
+                var bookpop = "<a href=\"javascript:bookclick("+result[j].categoryId+","+result[j].id+");\">"+
+                    result[j].name +"</a>";
+                $("#popular").append(bookpop);
+            }
+        }
+    });
 </script>
 <script src="/laofuzi/js/index.js"></script>
 <script src="/laofuzi/js/public.js"></script>
-
 </html>
