--- a/src/main/resources/static/css/style1.css
+++ b/src/main/resources/static/css/style1.css
@@ -242,12 +242,11 @@ dd {
 .last {
     width: 300px;
     position: absolute;
-    top: 88px;
+    top: 38px;
     right: 30px;
     background: #fff;
     min-height: 300px;
     z-index: 3;
-    border-top: 5px solid red;
     box-shadow: 3px 3px 2px rgba(204, 204, 204, 0.51), -3px -3px 2px rgba(204, 204, 204, 0.51);
     display: none;
 }
@@ -269,8 +268,18 @@ dd {
 
 .shop {}
 
+.lih4{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background: #fafafa;
+    border-top: 1px solid #e5e5e5;
+    font-size: 14px;
+    padding: 0 5px;
+}
+
 .shop li {
-    padding: 20px 0px;
+    padding: 10px 10px;
 }
 
 .shop li h4 {
@@ -2152,7 +2161,7 @@ table.choice tr td.td_a a.now {
 }
 
 .l_list {
-    width: 972px;
+    width: 100%;
     overflow: hidden;
     float: left;
     padding-bottom: 30px;
@@ -2219,7 +2228,7 @@ table.choice tr td.td_a a.now {
 }
 
 ul.cate_list {
-    padding: 5px 0;
+    padding: 5px 60px;
 }
 
 ul.cate_list li {
@@ -2228,7 +2237,7 @@ ul.cate_list li {
     overflow: hidden;
     float: left;
     display: inline;
-    margin: 0 5px;
+    margin: 0 10px;
     text-align: center;
     padding: 10px;
     box-sizing: border-box;
@@ -2312,28 +2321,28 @@ ul.cate_list li .carbg a.ss:hover {
 /*}*/
 
 ul.cate_list li .carbg a.j_car {
-    width: 138px;
-    height: 28px;
-    line-height: 28px;
+    width: 209px;
+    height: 30px;
+    line-height: 30px;
     overflow: hidden;
-    background: url(../images/cars.png) no-repeat 24px center;
+    background: url(/laofuzi/images/cars.png) no-repeat 24px center;
     color: #ff4e00;
     text-indent: 47px;
     float: left;
     display: inline;
-    margin-right: -1px;
+    /*margin-right: -1px;*/
     border: 1px solid #cccccc;
 }
 
 ul.cate_list li .carbg a.j_car:hover {
     color: #FFF;
-    background: #ff4e00 url(../images/cars_h.png) no-repeat 24px center;
+    background: #ff4e00 url(/laofuzi/images/cars_h.png) no-repeat 24px center;
     border: 1px solid #ff4e00;
 }
 
 ul.cate_list li:hover .carbg a.j_car {
     color: #FFF;
-    background: #ff4e00 url(../images/cars_h.png) no-repeat 24px center;
+    background: #ff4e00 url(/laofuzi/images/cars_h.png) no-repeat 24px center;
     border: 1px solid #ff4e00;
 }
 
